# event-manager-test

./: .env_sample  README.md  event_manager_test.postman.json  manage.py  poetry_scripts.py  pyproject.toml  pytest.ini
event_manager_test/: asgi.py  settings.py  urls.py  wsgi.py
event_manager_test/app/: admin.py  apps.py  filters.py  models.py  serializers.py  views.py
event_manager_test/app/migrations/: 0001_initial.py  0002_event_capacity.py  0003_event_status.py  0004_event_description.py
event_manager_test/utils/: enum.py
event_manager_test/utils/exceptions/: event.py  signup.py
tests/: conftest.py
tests/test_app/: test_event.py  test_user.py
